# social

./: .gitignore  DUSTWAVE_FINISH_LINE_CHECKLIST.md  DUSTWAVE_MIGRATION.md  MIXPOST_PARITY_AUDIT.md  README.md  RELEASE.md  SECURITY.md  THIRD_PARTY_NOTICES.md  package-lock.json  package.json  vite.desktop.config.js
.github/workflows/: desktop.yml
docs/: BEST_PRACTICES.md  GIF_PROVIDER_DECISION.md  MVP_LAUNCH_PLAN.md  SUPPORT_RUNBOOK.md
resources/css/: fonts.css
resources/desktop/: index.html
resources/desktop/src/: App.vue  styles.css
scripts/: apple-auth.js  build-desktop-release.mjs  build-ffmpeg-lgpl-sidecars.mjs  build-macos-release.mjs  clean-desktop-artifacts.mjs  configure-github-release-secrets.mjs  create-macos-dmg.mjs  desktop-release-preflight.mjs  generate-tauri-latest-json.mjs  notarize-macos-app.mjs  prepare-media-sidecars.mjs  prepare-updater-config.mjs  prepare-updater-keys.mjs  release-repo.js  sign-macos-bundle.mjs  smoke-launch-macos.mjs  verify-macos-release-artifacts.mjs
src-tauri/: Cargo.toml  tauri.conf.json  tauri.updater.example.json
src-tauri/binaries/: README.md
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 0001_initial.sql  0002_system_logs.sql  0003_job_idempotency.sql  0004_service_configuration.sql
src-tauri/src/: commands.rs  external_media.rs  facebook.rs  lib.rs  main.rs  mastodon.rs  media_tools.rs  secrets.rs  twitter.rs
src-tauri/src/db/: mod.rs
src-tauri/src/domain/: local_data.rs  mod.rs  provider.rs  settings.rs
src/Commands/: PublishAssetsCommand.php
(+6 files in other folders)
