[package]
name = "dust-wave-social"
version = "0.1.0"
description = "Dust Wave desktop social media manager"
authors = ["Dust Wave"]
edition = "2024"
rust-version = "1.85"

[lib]
name = "dust_wave_social_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.2", features = [] }

[dependencies]
chrono = { version = "0.4.42", default-features = false, features = ["clock"] }
image = { version = "0.25.9", default-features = false, features = ["jpeg", "png"] }
keyring = { version = "3.6.3", default-features = false, features = ["apple-native"] }
reqwest = { version = "0.12.24", default-features = false, features = ["blocking", "json", "multipart", "rustls-tls"] }
rusqlite = { version = "0.40.1", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "2.11.3", features = ["protocol-asset"] }
tauri-plugin-dialog = "2"
tauri-plugin-notification = "2"
tauri-plugin-opener = "2"
tauri-plugin-updater = "2"
uuid = { version = "1.18.1", features = ["v4"] }
